--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
+*$py.class
 
 # C extensions
 *.so
@@ -55,3 +56,6 @@ docs/_build/
 
 # PyBuilder
 target/
+
+# Typescript source map
+*.js.map
