--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//geovismain/migrations/0001_initial.py=utf-8
 encoding//geovismain/migrations/0002_auto_20150723_1059.py=utf-8
+encoding//scatterdatareview/migrations/0001_initial.py=utf-8
